# IMDB-Sentiment-Analysis-Demo

./: .gitignore  DEPLOYMENT_GUIDE.md  INSTALLATION.md  PROJECT_SUMMARY.md  README.md  compare_all_models.py  copy_models.bat  copy_models.sh  main.py  problem_statement.md  pyproject.toml  requirements.txt  test_imports.py  train_lstm_only.py  train_verbalizer_only.py
artifacts/lstm/: vocab.json
artifacts/verbalizer/: config.json
deployment/: DEPLOYMENT_GUIDE.md  README_SEPARATED_STACKS.md
deployment/cdk/: app.py  app_with_frontend.py  frontend_stack.py  requirements.txt  sentiment_stack.py
deployment/cdk/cdk.out/: SentimentAnalysisStack.assets.json  SentimentAnalysisStack.template.json  manifest.json  tree.json
deployment/cdk/cdk_constructs/: __init__.py  api_gateway_construct.py  frontend_construct.py  lambda_construct.py  (+2 more)
deployment/frontend/: .env.production  README.md  package-lock.json  package.json  tsconfig.json
deployment/lambda/: Dockerfile  event.json  inference_engine.py
deployment/scripts/: deploy_separated_stacks.py  deploy_with_frontend.py  download_modernbert.py  export_models.py  validate_deployment.py
docs/: DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  PROJECT_SUMMARY.md  TRAINING_GUIDE.md
src/: __init__.py
src/data/: __init__.py  dataset.py  modernbert_dataset.py  preprocessing.py  verbalizer_dataset.py
src/models/: __init__.py  loss_functions.py  lstm_pretrained.py  lstm_pure.py  modernbert_classifier.py  verbalizer.py
src/training/: __init__.py  evaluator.py  trainer.py
src/utils/: __init__.py  config.py  helpers.py
(+19 files in other folders)
